--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
                </todo-item>
             </ol>
         </div>
+
+        <div id="app-2">
+            <span v-bind:title="message">
+                Hover your mouse over me for a few seconds
+                to see my dynamically bound title!
+            </span>
+        </div>
+
+        <div id="app-3">
+            <span
+            v-if="seen">
+                Now you see me
+            </span>
+        </div>
+
+        <div id="app-4">
+            <ol>
+                <li v-for="todo in todos">
+                    {{ todo.text }}
+                </li>
+            </ol>
+        </div>
+
+        <div id="app-5">
+            <p> {{ message}} </p>
+            <button v-on:click="reverseMessage">Reverse message</button>
+        </div>
         <!-- https://vuejs.org/v2/guide/list.html#key -->
         <script src="index.js"></script>
     </body>
