--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             v-for="item in groceryList"
             v-bind:todo ="item"></todo-item>
         </div>
+
+        <div id="example">
+            <p>example</p>
+        </div>
         <!-- https://vuejs.org/v2/guide/list.html#key -->
         <script src="index.js"></script>
 
