--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div id="example">
             <p>example</p>
             <p>Message: {{ msg }} </p>
+            <p>Conputed reversed message: {{ reversedMsg }} </p>
             <p v-once>This will never change: {{ msg }} </p>
             <input v-model="msg">
 
